Agregue el contador de dejar de colgar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <label class="resumen">Le hace falta colgar:<span class="falta"></span></label>
             <label class="resumen">Restantes del Mes:<span class="alDia"></span></label>
             <label class="resumen">Porcentaje Diario:<span class="porcentajeDia"></span></label>
-            
+            <label class="resumen">Puede Dejar de Colgar:<span class="dejarDeColgar"></span></label>
         </div>
 
         <div class="resumen" >
