Aqui hice que funcionaran un monton de cosas :V

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <label class="resumen">Restantes del Mes:<span class="alDia"></span></label>
             <label class="resumen">Porcentaje Diario:<span class="porcentajeDia"></span></label>
             <label class="resumen">Puede Dejar de Colgar:<span class="dejarDeColgar"></span></label>
-           
+            <label class="resumen">Para Estar en Metrica:<span class="paraMetrica"></span></label>
         </div>
 
         <div class="resumen" >
