Aqui agregue: -Funcion para que los botones trabajen por separado y ademas escondan y compriman los cuadros

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </div>
 
-        <div class="resumen" >
+        <div id="calendario" class="resumen" >
 
             <div class="botonSwitch2">
                 <input type="checkbox" id="btn-switch2">  
