Realmente no se que cambie pero todavia funciona :v

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Release Rate Adviser</title>
     </head>
     <body>
-        
+
         <h1>Release Rate Adviser</h1>
 
         <div class="MedidorYDatos">
@@ -104,7 +104,7 @@
 
         <div class="espacio">
            <span class="firma">Develop by Sebastian Delgado</span> 
-            
+           <img src="images/sign.png" class="logo" alt="Italian Trulli" >
         </div>
 
         <script src="activacion.js"></script>
