Aqui todo funciona :v

--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
                 class="lbl-switch"></label> 
             </div>
             <h1 class="res">Resumen:</h1>
-            <label class="resumen" id="primerSeccionDatos">Promedio de Llamadas:<span class="prom"></span></label>
-            <label class="resumen" id="primerSeccionDatos1">Le hace falta colgar:<span class="falta"></span></label>
-            <label class="resumen" id="primerSeccionDatos2">Restantes del Mes:<span class="alDia"></span></label>
-            <label class="resumen" id="primerSeccionDatos3">Porcentaje Diario:<span class="porcentajeDia"></span></label>
-            <label class="resumen" id="primerSeccionDatos4">Puede Dejar de Colgar:<span class="dejarDeColgar"></span></label>
-            <label class="resumen" id="primerSeccionDatos5">Para Estar en Metrica:<span class="paraMetrica"></span></label>
 
+                <label class="resumen" id="primerSeccionDatos">Promedio de Llamadas:<span class="prom datosResumen"></span></label>
+                <label class="resumen" id="primerSeccionDatos1">Le hace falta colgar:<span class="falta datosResumen"></span></label>
+                <label class="resumen" id="primerSeccionDatos2">Restantes del Mes:<span class="alDia datosResumen"></span></label>
+                <label class="resumen" id="primerSeccionDatos3">Porcentaje Diario:<span class="porcentajeDia datosResumen"></span></label>
+                <label class="resumen" id="primerSeccionDatos4">Puede Dejar de Colgar:<span class="dejarDeColgar datosResumen"></span></label>
+                <label class="resumen" id="primerSeccionDatos5">Para Estar en Metrica:<span class="paraMetrica datosResumen"></span></label>
+           
         </div>
 
         <div id="calendario" class="resumen" >
@@ -104,7 +105,7 @@
 
         <div class="espacio">
            <span class="firma">Develop by Sebastian Delgado</span> 
-           <img src="images/sign.png" class="logo" alt="Italian Trulli" >
+           <img src="images/sign.png" class="logo" >
         </div>
 
         <script src="activacion.js"></script>
