Haciendo que los dias se cuenten solos

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         
 
         <div class="espacio">
-           <span class="firma">Develop by Sebastian Delgado</span> 
+           <span class="firma">Developed by Sebastian Delgado</span> 
            <img src="images/sign.png" class="logo" >
         </div>
 
